syntax = "proto3";

package talk;

option go_package = "github.com/open-scheduler/proto";

// Heartbeat message sent from NodeAgent to ControlPlane
message HeartbeatRequest {
  string node_id = 1;
  int64 timestamp = 2;
  float ram_mb = 3;   // Available RAM in MB
  float cpu_percent = 4; // Available CPU in percent
  float disk_mb = 5;  // Available Disk in MB
  map<string, string> metadata = 6;
}

message HeartbeatResponse {
  bool ok = 1;
  string message = 2;
}

// Request to get a job from the ControlPlane
message GetJobRequest {
  string node_id = 1;
}

// Job specification, inspired by Nomad job spec (simplified)
message Job {
  string job_id = 1;
  string name = 2;
  string type = 3;
  string datacenters = 4; // comma-separated, for simplicity

  repeated Task tasks = 5;
  map<string, string> meta = 6;
}

message Task {
  string name = 1;
  string driver = 2;
  string exec = 3;
  ContainerSpec config = 4;
  map<string, string> env = 5;
  Resources resources = 6;
  repeated Volume volumes = 7;
  string kind = 8;
}

// Container resource specifications
message Resources {
  int64 memory_mb = 1;      // Memory limit in MB
  int64 memory_reserve_mb = 2; // Reserved memory in MB
  float cpu = 3;            // CPU limit (e.g., 1.0 = 1 core, 0.5 = half core)
  float cpu_reserve = 4;    // Reserved CPU
}

// Volume mount specification
message Volume {
  string host_path = 1;      // Path on the host
  string container_path = 2; // Path inside the container
  bool read_only = 3;        // Whether the volume is read-only
}

// Container specification
message ContainerSpec {
  string image = 1;
  repeated string command = 2;  // Command to run in the container
  repeated string args = 3;     // Arguments for the command
  map<string, string> options = 4;
}

message GetJobResponse {
  bool has_job = 1;
  Job job = 2;
  string message = 3;
}

// Update status of a job from NodeAgent to ControlPlane
message UpdateStatusRequest {
  string node_id = 1;
  string job_id = 2;
  string status = 3; // e.g., "running", "completed", "failed"
  string detail = 4;
  int64 timestamp = 5;
}

message UpdateStatusResponse {
  bool ok = 1;
  string message = 2;
}

// Request to claim a job from the ControlPlane
message ClaimJobRequest {
  string node_id = 1;
  string job_id = 2;
}

message ClaimJobResponse {
  bool ok = 1;
  string message = 2;
}

service NodeAgentService {
  // NodeAgent sends a heartbeat to ControlPlane
  rpc Heartbeat(HeartbeatRequest) returns (HeartbeatResponse);

  // NodeAgent requests a job from ControlPlane
  rpc GetJob(GetJobRequest) returns (GetJobResponse);

  // NodeAgent claims a job before executing it
  rpc ClaimJob(ClaimJobRequest) returns (ClaimJobResponse);

  // NodeAgent sends job status update
  rpc UpdateStatus(UpdateStatusRequest) returns (UpdateStatusResponse);
}

